# acralite

./: .gitignore  Cargo.toml  Dockerfile  deny.toml
migrations/: V1__init.sql
src/: dirs.rs  extractors.rs  handlers.rs  main.rs  report.rs  responses.rs  retrace.rs  settings.rs  templates.rs
src/db/: connection.rs  migrations.rs  mod.rs  models.rs
src/db/repositories/: mod.rs
src/handlers/: apps.rs  error.rs  mod.rs  users.rs
templates/: base.html  error_page.html
templates/apps/: create.html  create_result.html  details.html  index.html
templates/users/: create.html  list.html
