[package]
name = "acralite"
version = "0.1.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2021"
license = "AGPL-3.0-only"
publish = false

[dependencies]
anyhow = "1.0.80"
askama = { version = "0.12.1", default-features = false, features = ["with-axum"] }
askama_axum = "0.4.0"
async-trait = "0.1.77"
axum = "0.7.4"
axum-extra = { version = "0.9.2", features = ["typed-header"] }
bitflags = "2.4.2"
derive_more = "0.99.17"
headers = "0.4.0"
hyper = { version = "1.2.0", features = ["http2"] }
once_cell = { version = "1.19.0", features = ["parking_lot"] }
parking_lot = "0.12.1"
proguard = "5.4.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.23.0"
rand = "0.8.5"
refinery = { version = "0.8.12", features = ["rusqlite"] }
rusqlite = { version = "0.30.0", features = ["bundled"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_repr = "0.1.18"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["fs", "macros", "parking_lot", "process", "rt"] }
tokio-shutdown = "0.1.4"
toml = "0.8.10"
tower = { version = "0.4.13", features = ["timeout"] }
tower-http = { version = "0.5.2", features = ["compression-gzip", "decompression-gzip", "trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
unidirs = "0.1.1"

[profile.release]
lto = true
strip = true
