[package]
name = "acralite"
version = "0.1.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2021"
license = "AGPL-3.0-only"
publish = false

[dependencies]
anyhow = "1.0.82"
askama = { version = "0.12.1", default-features = false, features = ["with-axum"] }
askama_axum = "0.4.0"
async-trait = "0.1.80"
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
bitflags = "2.5.0"
derive_more = "0.99.17"
headers = "0.4.0"
hyper = { version = "1.3.1", features = ["http2"] }
once_cell = { version = "1.19.0", features = ["parking_lot"] }
parking_lot = "0.12.1"
proguard = "5.4.1"
r2d2 = "0.8.10"
r2d2_sqlite = "0.24.0"
rand = "0.8.5"
refinery = { version = "0.8.14", features = ["rusqlite"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
serde_repr = "0.1.19"
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["fs", "macros", "parking_lot", "process", "rt"] }
tokio-shutdown = "0.1.4"
toml = "0.8.12"
tower = { version = "0.4.13", features = ["timeout"] }
tower-http = { version = "0.5.2", features = ["compression-gzip", "decompression-gzip", "trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
unidirs = "0.1.1"

[profile.release]
lto = true
strip = true
