[package]
name = "acralite"
version = "0.1.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2024"
license = "AGPL-3.0-only"
publish = false

[dependencies]
anyhow = "1.0.96"
askama = { version = "0.13.0", default-features = false, features = ["derive", "std"] }
askama_web = { version = "0.13.0", features = ["axum-0.8"] }
async-trait = "0.1.86"
axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["typed-header"] }
bitflags = "2.8.0"
derive_more = { version = "2.0.1", features = ["from"] }
headers = "0.4.0"
hyper = { version = "1.6.0", features = ["http2"] }
once_cell = { version = "1.20.3", features = ["parking_lot"] }
parking_lot = "0.12.3"
proguard = "5.5.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.26.0"
rand = "0.9.0"
refinery = { version = "0.8.16", features = ["rusqlite"] }
rusqlite = { version = "0.33.0", features = ["bundled"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
serde_repr = "0.1.19"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["fs", "macros", "parking_lot", "process", "rt"] }
tokio-shutdown = "0.1.5"
toml = "0.8.20"
tower = { version = "0.5.2", features = ["timeout"] }
tower-http = { version = "0.6.2", features = ["compression-gzip", "decompression-gzip", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
unidirs = "0.1.1"

[profile.release]
lto = true
strip = true
